<resources>
    <string name="app_name">Trabajo_Practico_Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="Inicio">Inicio\n\n</string>
    <string name="Perfil">Perfil\n</string>
    <string name="Inm">Inmuebles</string>
    <string name="Inmuebles">Inmuebles</string>
    <string name="Inquilinos">Inquilinos</string>
    <string name="Contratos">Contratos</string>
    <string name="Logout">Logout\n</string>
    <!-- Opciones para el Spinner de Uso -->
    <string-array name="lista_usos">
        <item>Residencial</item>
        <item>Comercial</item>
        <item>Industrial</item>
    </string-array>

    <!-- Opciones para el Spinner de Tipo -->
    <string-array name="lista_tipos">
        <item>Casa</item>
        <item>Departamento</item>
        <item>Local</item>
        <item>Terreno</item>
        <item>Oficina</item>
    </string-array>
</resources>