<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@android:drawable/btn_star"
            android:title="@string/Inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/perfil"
            android:title="@string/Perfil" />
        <item
            android:id="@+id/nav_inmuebles"
            android:icon="@drawable/inmuebles"
            android:title="@string/Inmuebles" />
        <item
            android:id="@+id/nav_inquilinos"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/Inquilinos" />
        <item
            android:id="@+id/nav_contratos"
            android:icon="@drawable/contrato"
            android:title="@string/Contratos" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logut"
            android:title="@string/Logout" />

    </group>
</menu>